Version mobile accommodation, corrections diverses

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -7,11 +7,18 @@
     align-items: center;
     height: 415px;
     margin: 0 75px;
+    @media (max-width: 425px) {
+        margin: 0 20px;
+        height: 275px;
+    }
     &_image {
         height: 100%;
         width: 100%;
         object-fit: cover;
         border-radius: 25px;
+        @media (max-width: 425px) {
+            border-radius: 10px;
+        }
     }
     &_button_left {
         left: 20px;
@@ -22,6 +29,9 @@
     &_counter {
         bottom: 20px;
         font-size: 18px;
+        @media (max-width: 425px) {
+            font-size: 12px;
+        }
     }
     &_button_left,
     &_button_right {
@@ -38,5 +48,8 @@
     .fa-chevron-left,
     .fa-chevron-right {
         height: 90px;
+        @media (max-width: 425px) {
+            height: 24px;
+        }
     }
 }
