--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -4,12 +4,14 @@
     &_top {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         background-color: $primary-color;
         border-radius: 5px;
         color: $secondary-color;
         padding: 0 15px;
         @media (max-width: 425px) {
             padding: 0 5px;
+            height: 30px;
             h2 {
                 font-size: 13px;
             }
