--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -6,4 +6,8 @@
     display: inline-block;
     padding: 5px 20px;
     color: $secondary-color;
+    @media (max-width: 425px) {
+        border-radius: 10px;
+        font-size: 10px;
+    }
 }
