--- a/src/components/UserPicture/UserPicture.scss
+++ b/src/components/UserPicture/UserPicture.scss
@@ -1,4 +1,7 @@
 .userPicture {
     height: 64px;
     border-radius: 50%;
+    @media (max-width: 425px) {
+        height: 32px;
+    }
 }
