--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -10,8 +10,9 @@
         gap: 30px;
     }
     &_p {
-        font-size: 18px;
+        font-size: 24px;
         line-height: 25px;
+        font-weight: 400;
         background-color: $background-shadow-color;
         color: $primary-color;
         padding: 15px;
