--- a/src/pages/Accommodation/Accommodation.scss
+++ b/src/pages/Accommodation/Accommodation.scss
@@ -2,39 +2,75 @@
 
 .accommodation {
     margin: 25px 75px 50px 75px;
+    @media (max-width: 425px) {
+        margin: 10px 20px 30px 20px;
+    }
     &_top {
         display: flex;
         justify-content: space-between;
-        color: $primary-color;
-        &_text {
-            &_title {
-                font-size: 36px;
-                margin-top: 0;
-                margin-bottom: 5px;
-            }
-            &_location {
-                font-size: 18px;
-            }
+        margin-bottom: 25px;
+        @media (max-width: 425px) {
+            flex-direction: column;
         }
-        &_host {
+        &_left {
             display: flex;
-            align-items: center;
-            &_name {
-                font-size: 18px;
-                white-space: pre-wrap;
-                width: 75px;
-                text-align: right;
-                margin-right: 15px;
-            }
-        }
-    }
-    &_mid {
-        display: flex;
-        justify-content: space-between;
-        margin: 20px 0;
-        &_tags {
-            display: flex;
+            flex-direction: column;
             gap: 10px;
+            &_text {
+                color: $primary-color;
+                &_title {
+                    font-size: 36px;
+                    margin: 0 0 5px 0;
+                    @media (max-width: 425px) {
+                        font-size: 18px;
+                    }
+                }
+                &_location {
+                    font-size: 18px;
+                    @media (max-width: 425px) {
+                        font-size: 14px;
+                    }
+                }
+            }
+            &_tags {
+                display: flex;
+                gap: 10px;
+                margin-top: 20px;
+                @media (max-width: 425px) {
+                    margin-top: 0;
+                }
+            }
+        }
+        &_right {
+            display: flex;
+            flex-direction: column;
+            @media (max-width: 425px) {
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: 20px;
+            }
+            &_host {
+                display: flex;
+                align-items: center;
+                &_name {
+                    color: $primary-color;
+                    font-size: 18px;
+                    white-space: pre-wrap;
+                    width: 75px;
+                    text-align: right;
+                    margin-right: 15px;
+                    @media (max-width: 425px) {
+                        font-size: 12px;
+                    }
+                }
+            }
+            &_stars {
+                margin-top: 25px;
+                @media (max-width: 425px) {
+                    margin-top: 0;
+                }
+            }
         }
     }
     &_bot {
@@ -43,16 +79,30 @@
         color: $primary-color;
         font-size: 18px;
         line-height: 25px;
+        @media (max-width: 425px) {
+            flex-direction: column;
+            gap: 25px;
+        }
         &_dropdown {
             width: 45%;
+            @media (max-width: 425px) {
+                width: 100%;
+            }
             h2 {
                 font-size: 18px;
+                @media (max-width: 425px) {
+                    font-size: 13px;
+                }
             }
             &_description,
             &_equipments {
                 margin: 0;
                 background-color: $background-shadow-color;
                 padding: 15px;
+                @media (max-width: 425px) {
+                    font-size: 12px;
+                    line-height: 17px;
+                }
             }
             &_equipments {
                 list-style: none;
